--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -1,10 +1,12 @@
 importFrom(ggplot2, scale_size, ggtitle, qplot, geom_bar, aes, stat_sum)
 importFrom(ggmap, qmap)
+importFrom(plyr, ldply)
+importFrom(reshape2, acast, melt)
 importFrom(gridExtra, grid.arrange, arrangeGrob)
 ## exporting methods implicitly exports the generic
-export(getSampleOf, getSubSample, filterUser, getBetween, plotGisDistribution)
-#importFrom("graphics", plot)
-#exportClasses(mle, profile.mle, summary.mle)
+export(getSampleOf, getSubSample, filterUser, getBetween, plotGisDistribution, mixture.predict)
+
+##exportClasses(mle, profile.mle, summary.mle)
 ## All methods for imported generics:
 #exportMethods(coef, confint, logLik, plot, profile, summary, 
 #              show, update, vcov)
