--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -4,7 +4,9 @@ importFrom(plyr, ldply)
 importFrom(reshape2, acast, melt)
 importFrom(gridExtra, grid.arrange, arrangeGrob)
 ## exporting methods implicitly exports the generic
-export(getSampleOf, getSubSample, filterUser, getBetween, plotGisDistribution, mixture.predict)
+export(getSampleOf, getSubSample, filterUser, getBetween, getClosestTo)
+export(plotGisDistribution)
+export(mixture.predict, feature.extraction)
 
 ##exportClasses(mle, profile.mle, summary.mle)
 ## All methods for imported generics:
