exported some sampling tools

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -4,7 +4,7 @@ importFrom(plyr, ldply)
 importFrom(reshape2, acast, melt)
 importFrom(gridExtra, grid.arrange, arrangeGrob)
 ## exporting methods implicitly exports the generic
-export(getSampleOf, getSubSample, filterUser, getBetween, getClosestTo)
+export(getSampleOf, getSubSample, filterUser, getBetween, getClosestTo, getRandomInterval, getFromInterval)
 export(plotGisDistribution, timeline.plots)
 export(mixture.predict, features.extraction)
 
