renamed functions according to google coding style

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -6,7 +6,7 @@ importFrom(gridExtra, grid.arrange, arrangeGrob)
 ## exporting methods implicitly exports the generic
 export(getSampleOf, getSubSample, filterUser, getBetween, getClosestTo, getRandomInterval, getFromInterval, PartitionHistoryData)
 export(plotGisDistribution, separate.timeline.plots, timeline.plots, VisualizeExtraction, PlotPredictionDiff)
-export(mixture.predict)
+export(MixturePredict)
 export(lm.create.models, ModelPairing)
 export(features.extraction, create.lm.features)
 export(PredictionError)
