--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -14,7 +14,7 @@ export(plotGisDistribution, separate.timeline.plots, timeline.plots, VisualizeEx
 export(FeatureExtraction, create.lm.features)
 
 ## predition tools
-export(MixturePredict, ModelPairing, lm.create.models)
+export(MixturePredict, PredictionsAndValidations, ModelPairing, lm.create.models)
 
 ## validation tools
 export(PredictionError)
