--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: mixturePrediction
-Version: 0.6
+Version: 0.7
 Date: 2013-10-27
 Title: Prediction analysis with Mixture Modelling
 Authors@R: c(person("Sami", "Airaksinen", role = c("aut", "cre"),
                      email = "sami.airaksinen@aalto.fi"))
 Author: Sami Airaksinen
 Maintainer: Sami Airaksinen <Sami.Airaksinen@aalto.fi>
-Depends: R (>= 2.15.2), ggmap, ggplot2, gridExtra, plyr, reshape2
+Depends: R (>= 2.15.2), ggmap, ggplot2, gridExtra, plyr, reshape2, caret
 Suggests: 
 Description: Thesis work packaged nicely...
 License: GPL (>= 2)
